chore(intl): update translations

--- a/assets/translations/az_AZ.json
+++ b/assets/translations/az_AZ.json
@@ -10,6 +10,7 @@
   "ALBUMS_FROM_ARTIST": "Sənətçidən albomlar",
   "ALBUM_ARTIST": "Album Artist",
   "ALBUM_SINGLE": "Albom",
+  "ALL_FILES": "All files",
   "ARTIST": "Sanatçılar",
   "ARTIST_SINGLE": "Sənətçi",
   "ASCENDING": "Artan",
@@ -85,6 +86,8 @@
   "FILE_PATH_OR_URL": "Enter file path or URL",
   "FOLDERS_NOT_FOUND": "Few of the folders from your collection could not be located.\nPlease ensure the presence & re-start the app, or remove these folders before proceeding:",
   "FOLDER_NOT_FOUND": "This folder could not be located",
+  "FROM_FILE": "From file",
+  "FROM_URL": "From URL",
   "FULLSCREEN": "Enter fullscreen",
   "GENRE": "Genre",
   "GO_TO_SETTINGS": "Tənzimləmələrə get",
@@ -106,6 +109,7 @@
   "LYRICS": "Sözlər",
   "LYRICS_NOT_FOUND": "Söz tapılmadı.",
   "LYRICS_RETRIEVING": "Sözlər getirilir...",
+  "MEDIA_FILES": "Media files",
   "MENU": "Menyu",
   "MORE": "More",
   "MUTE": "Səssiz",
@@ -130,6 +134,8 @@
   "NO_PLAYLISTS_FOUND": "Oynatma sırası tapılmadı.\nBurada görmək istədiyin bir oynatma sırasını yarada bilərsən.",
   "N_TRACKS": "N musiqi",
   "OK": "Yaxşı",
+  "OPEN_FILE": "Play file",
+  "OPEN_FILE_OR_URL": "Play file or URL",
   "OPEN_IN_BROWSER": "Open in browser",
   "OPTIONS": "Seçimlər",
   "ORDER": "Sıra",
