--- a/assets/translations/de_DE.json
+++ b/assets/translations/de_DE.json
@@ -10,6 +10,7 @@
   "ALBUMS_FROM_ARTIST": "Alben von diesen Künstler",
   "ALBUM_ARTIST": "Album Artist",
   "ALBUM_SINGLE": "Album",
+  "ALL_FILES": "All files",
   "ARTIST": "Künstler",
   "ARTIST_SINGLE": "Künstler",
   "ASCENDING": "aufsteigend",
@@ -85,6 +86,8 @@
   "FILE_PATH_OR_URL": "Enter file path or URL",
   "FOLDERS_NOT_FOUND": "Few of the folders from your collection could not be located.\nPlease ensure the presence & re-start the app, or remove these folders before proceeding:",
   "FOLDER_NOT_FOUND": "This folder could not be located",
+  "FROM_FILE": "From file",
+  "FROM_URL": "From URL",
   "FULLSCREEN": "Enter fullscreen",
   "GENRE": "Genre",
   "GO_TO_SETTINGS": "ZU EINSTELLUNGEN",
@@ -106,6 +109,7 @@
   "LYRICS": "Lyrics",
   "LYRICS_NOT_FOUND": "keine Lyrics gefunden.",
   "LYRICS_RETRIEVING": "Abrufen von Lyrics...",
+  "MEDIA_FILES": "Media files",
   "MENU": "Menü",
   "MORE": "Mehr",
   "MUTE": "Stumm",
@@ -130,6 +134,8 @@
   "NO_PLAYLISTS_FOUND": "Keine Playlist gefunden.\nErstellen Sie eine, um sie hier zu sehen.",
   "N_TRACKS": "N Songs",
   "OK": "OKAY",
+  "OPEN_FILE": "Play file",
+  "OPEN_FILE_OR_URL": "Play file or URL",
   "OPEN_IN_BROWSER": "im Browser öffnen",
   "OPTIONS": "Optionen",
   "ORDER": "Reihenfolge",
