--- a/assets/translations/fr_FR.json
+++ b/assets/translations/fr_FR.json
@@ -10,6 +10,7 @@
   "ALBUMS_FROM_ARTIST": "Albums de cet artiste",
   "ALBUM_ARTIST": "Album Artist",
   "ALBUM_SINGLE": "Album",
+  "ALL_FILES": "All files",
   "ARTIST": "Artistes",
   "ARTIST_SINGLE": "Artiste",
   "ASCENDING": "Ascendant",
@@ -85,6 +86,8 @@
   "FILE_PATH_OR_URL": "Enter file path or URL",
   "FOLDERS_NOT_FOUND": "Few of the folders from your collection could not be located.\nPlease ensure the presence & re-start the app, or remove these folders before proceeding:",
   "FOLDER_NOT_FOUND": "This folder could not be located",
+  "FROM_FILE": "From file",
+  "FROM_URL": "From URL",
   "FULLSCREEN": "Enter fullscreen",
   "GENRE": "Genre",
   "GO_TO_SETTINGS": "Se rendre dans les paramètres",
@@ -106,6 +109,7 @@
   "LYRICS": "Paroles",
   "LYRICS_NOT_FOUND": "Paroles non trouvées",
   "LYRICS_RETRIEVING": "Récupération des paroles...",
+  "MEDIA_FILES": "Media files",
   "MENU": "Menu",
   "MORE": "Plus",
   "MUTE": "Couper le son",
@@ -130,6 +134,8 @@
   "NO_PLAYLISTS_FOUND": "Aucune playlist trouvée.\nVous pouvez en créer pour les voir ici.",
   "N_TRACKS": "N pistes",
   "OK": "OK",
+  "OPEN_FILE": "Play file",
+  "OPEN_FILE_OR_URL": "Play file or URL",
   "OPEN_IN_BROWSER": "Ouvrir dans le navigateur",
   "OPTIONS": "Options",
   "ORDER": "Ordre",
