--- a/assets/translations/ja_JP.json
+++ b/assets/translations/ja_JP.json
@@ -10,6 +10,7 @@
   "ALBUMS_FROM_ARTIST": "アルバム",
   "ALBUM_ARTIST": "アルバムアーティスト",
   "ALBUM_SINGLE": "アルバム",
+  "ALL_FILES": "All files",
   "ARTIST": "アーティスト",
   "ARTIST_SINGLE": "アーティスト",
   "ASCENDING": "昇順",
@@ -85,6 +86,8 @@
   "FILE_PATH_OR_URL": "Enter file path or URL",
   "FOLDERS_NOT_FOUND": "あなたのコレクションからいくつかのフォルダが見つかりませんでした。\n存在することを確認してアプリを再起動するか、続行する前にこれらのフォルダを削除してください:",
   "FOLDER_NOT_FOUND": "このフォルダは見つかりませんでした",
+  "FROM_FILE": "From file",
+  "FROM_URL": "From URL",
   "FULLSCREEN": "フルスクリーンにする",
   "GENRE": "ジャンル",
   "GO_TO_SETTINGS": "設定に移動する",
@@ -106,6 +109,7 @@
   "LYRICS": "歌詞",
   "LYRICS_NOT_FOUND": "歌詞が見つかりませんでした。",
   "LYRICS_RETRIEVING": "歌詞を取得中...",
+  "MEDIA_FILES": "Media files",
   "MENU": "メニュー",
   "MORE": "もっと",
   "MUTE": "ミュート",
@@ -130,6 +134,8 @@
   "NO_PLAYLISTS_FOUND": "プレイリストが見つかりません\n新しくプレイリストを作成してください",
   "N_TRACKS": "N トラック",
   "OK": "OK",
+  "OPEN_FILE": "Play file",
+  "OPEN_FILE_OR_URL": "Play file or URL",
   "OPEN_IN_BROWSER": "ブラウザで開く",
   "OPTIONS": "オプション",
   "ORDER": "順序",
