--- a/assets/translations/pt_BR.json
+++ b/assets/translations/pt_BR.json
@@ -10,6 +10,7 @@
   "ALBUMS_FROM_ARTIST": "Álbuns deste artista.",
   "ALBUM_ARTIST": "Album Artist",
   "ALBUM_SINGLE": "Album",
+  "ALL_FILES": "All files",
   "ARTIST": "Artistas",
   "ARTIST_SINGLE": "Artista",
   "ASCENDING": "Ascendente",
@@ -85,6 +86,8 @@
   "FILE_PATH_OR_URL": "Enter file path or URL",
   "FOLDERS_NOT_FOUND": "Algumas pastas da sua coleção não puderam ser localizadas.\nVerifique se elas existem e reinicie o aplicativo ou remova essas pastas antes de continuar:",
   "FOLDER_NOT_FOUND": "Esta pasta não pôde ser localizada",
+  "FROM_FILE": "From file",
+  "FROM_URL": "From URL",
   "FULLSCREEN": "Entrar em tela cheia",
   "GENRE": "Gênero",
   "GO_TO_SETTINGS": "VÁ PARA AS CONFIGURAÇÕES",
@@ -106,6 +109,7 @@
   "LYRICS": "Letras",
   "LYRICS_NOT_FOUND": "Letras não disponíveis.",
   "LYRICS_RETRIEVING": "Baixando letras...",
+  "MEDIA_FILES": "Media files",
   "MENU": "Menu",
   "MORE": "Mais",
   "MUTE": "Mudo",
@@ -130,6 +134,8 @@
   "NO_PLAYLISTS_FOUND": "Nenhuma playlist encontrada.\nCrie alguns para vê-los lá.",
   "N_TRACKS": "N faixas",
   "OK": "OK",
+  "OPEN_FILE": "Play file",
+  "OPEN_FILE_OR_URL": "Play file or URL",
   "OPEN_IN_BROWSER": "Abra no navegador",
   "OPTIONS": "Opções",
   "ORDER": "Pedido",
