--- a/assets/translations/ru_RU.json
+++ b/assets/translations/ru_RU.json
@@ -10,6 +10,7 @@
   "ALBUMS_FROM_ARTIST": "Альбомы",
   "ALBUM_ARTIST": "Исполнитель альбома",
   "ALBUM_SINGLE": "Альбом",
+  "ALL_FILES": "All files",
   "ARTIST": "Исполнители",
   "ARTIST_SINGLE": "Исполнитель",
   "ASCENDING": "По возрастанию",
@@ -85,6 +86,8 @@
   "FILE_PATH_OR_URL": "Enter file path or URL",
   "FOLDERS_NOT_FOUND": "Не удалось найти некоторые папки из Вашей коллекции.\nПожалуйста, убедитесь в их наличии и перезапустите приложение или удалите эти папки, прежде чем продолжить:",
   "FOLDER_NOT_FOUND": "Указанная папка не найдена",
+  "FROM_FILE": "From file",
+  "FROM_URL": "From URL",
   "FULLSCREEN": "Войти в полноэкранный режим",
   "GENRE": "Жанр",
   "GO_TO_SETTINGS": "В НАСТРОЙКИ",
@@ -106,6 +109,7 @@
   "LYRICS": "Текст",
   "LYRICS_NOT_FOUND": "Текст не найден.",
   "LYRICS_RETRIEVING": "Получение...",
+  "MEDIA_FILES": "Media files",
   "MENU": "Меню",
   "MORE": "Больше",
   "MUTE": "Отключить звук",
@@ -130,6 +134,8 @@
   "NO_PLAYLISTS_FOUND": "Плейлисты не найдены.\nСоздайте плейлист, чтобы увидеть его здесь.",
   "N_TRACKS": "N треков",
   "OK": "ОК",
+  "OPEN_FILE": "Play file",
+  "OPEN_FILE_OR_URL": "Play file or URL",
   "OPEN_IN_BROWSER": "Открыть в браузере",
   "OPTIONS": "Параметры",
   "ORDER": "Порядок",
