--- a/assets/translations/zh_CN.json
+++ b/assets/translations/zh_CN.json
@@ -10,6 +10,7 @@
   "ALBUMS_FROM_ARTIST": "来自该艺术家的专辑。",
   "ALBUM_ARTIST": "Album Artist",
   "ALBUM_SINGLE": "专辑",
+  "ALL_FILES": "All files",
   "ARTIST": "艺术家",
   "ARTIST_SINGLE": "艺术家",
   "ASCENDING": "升序",
@@ -85,6 +86,8 @@
   "FILE_PATH_OR_URL": "Enter file path or URL",
   "FOLDERS_NOT_FOUND": "Few of the folders from your collection could not be located.\nPlease ensure the presence & re-start the app, or remove these folders before proceeding:",
   "FOLDER_NOT_FOUND": "This folder could not be located",
+  "FROM_FILE": "From file",
+  "FROM_URL": "From URL",
   "FULLSCREEN": "Enter fullscreen",
   "GENRE": "Genre",
   "GO_TO_SETTINGS": "前往设置",
@@ -106,6 +109,7 @@
   "LYRICS": "歌词",
   "LYRICS_NOT_FOUND": "歌词未找到。",
   "LYRICS_RETRIEVING": "获取歌词中...",
+  "MEDIA_FILES": "Media files",
   "MENU": "菜单",
   "MORE": "更多",
   "MUTE": "切换静音",
@@ -130,6 +134,8 @@
   "NO_PLAYLISTS_FOUND": "未找到播放列表。\n创建后将会在此显示。",
   "N_TRACKS": "N 首曲目",
   "OK": "确定",
+  "OPEN_FILE": "Play file",
+  "OPEN_FILE_OR_URL": "Play file or URL",
   "OPEN_IN_BROWSER": "在浏览器中打开",
   "OPTIONS": "选项",
   "ORDER": "顺序",
