--- a/assets/translations/en_US.json
+++ b/assets/translations/en_US.json
@@ -10,6 +10,7 @@
   "ALBUMS_FROM_ARTIST": "Albums",
   "ALBUM_ARTIST": "Album Artist",
   "ALBUM_SINGLE": "Album",
+  "ALL_FILES": "All files",
   "ARTIST": "Artists",
   "ARTIST_SINGLE": "Artist",
   "ASCENDING": "Ascending",
@@ -85,6 +86,8 @@
   "FILE_PATH_OR_URL": "Enter file path or URL",
   "FOLDERS_NOT_FOUND": "Few of the folders from your collection could not be located.\nPlease ensure the presence & re-start the app, or remove these folders before proceeding:",
   "FOLDER_NOT_FOUND": "This folder could not be located",
+  "FROM_FILE": "From file",
+  "FROM_URL": "From URL",
   "FULLSCREEN": "Enter fullscreen",
   "GENRE": "Genre",
   "GO_TO_SETTINGS": "GO TO SETTINGS",
@@ -106,6 +109,7 @@
   "LYRICS": "Lyrics",
   "LYRICS_NOT_FOUND": "Lyrics not found.",
   "LYRICS_RETRIEVING": "Retrieving lyrics...",
+  "MEDIA_FILES": "Media files",
   "MENU": "Menu",
   "MORE": "More",
   "MUTE": "Mute",
@@ -130,6 +134,8 @@
   "NO_PLAYLISTS_FOUND": "No playlists found.\nCreate some to see them there.",
   "N_TRACKS": "N tracks",
   "OK": "OKAY",
+  "OPEN_FILE": "Play file",
+  "OPEN_FILE_OR_URL": "Play file or URL",
   "OPEN_IN_BROWSER": "Open in browser",
   "OPTIONS": "Options",
   "ORDER": "Order",
