--- a/assets/translations/fa_IR.json
+++ b/assets/translations/fa_IR.json
@@ -10,6 +10,7 @@
   "ALBUMS_FROM_ARTIST": "آلبوم‌ها",
   "ALBUM_ARTIST": "Album Artist",
   "ALBUM_SINGLE": "آلبوم‌ها",
+  "ALL_FILES": "All files",
   "ARTIST": "هنرمندان",
   "ARTIST_SINGLE": "هنرمند",
   "ASCENDING": "صعودی",
@@ -85,6 +86,8 @@
   "FILE_PATH_OR_URL": "Enter file path or URL",
   "FOLDERS_NOT_FOUND": "Few of the folders from your collection could not be located.\nPlease ensure the presence & re-start the app, or remove these folders before proceeding:",
   "FOLDER_NOT_FOUND": "This folder could not be located",
+  "FROM_FILE": "From file",
+  "FROM_URL": "From URL",
   "FULLSCREEN": "Enter fullscreen",
   "GENRE": "Genre",
   "GO_TO_SETTINGS": "رفتن به تنظیمات",
@@ -106,6 +109,7 @@
   "LYRICS": "تکست‌ها",
   "LYRICS_NOT_FOUND": "تکست آهنگ پیدا نشد.",
   "LYRICS_RETRIEVING": "گرفتن تکست‌ها...",
+  "MEDIA_FILES": "Media files",
   "MENU": "منو",
   "MORE": "More",
   "MUTE": "بی‌صدا",
@@ -130,6 +134,8 @@
   "NO_PLAYLISTS_FOUND": "لیست پخشی پیدا نشد.\nلیست پخش بسازید تا آن‌ها را ببینید.",
   "N_TRACKS": "N موسیقی",
   "OK": "اوکی",
+  "OPEN_FILE": "Play file",
+  "OPEN_FILE_OR_URL": "Play file or URL",
   "OPEN_IN_BROWSER": "Open in browser",
   "OPTIONS": "گزینه‌ها",
   "ORDER": "ترتیب",
