--- a/assets/translations/id_ID.json
+++ b/assets/translations/id_ID.json
@@ -10,6 +10,7 @@
   "ALBUMS_FROM_ARTIST": "Album",
   "ALBUM_ARTIST": "Album Artist",
   "ALBUM_SINGLE": "Album",
+  "ALL_FILES": "All files",
   "ARTIST": "Artis",
   "ARTIST_SINGLE": "Artis",
   "ASCENDING": "Menaik",
@@ -85,6 +86,8 @@
   "FILE_PATH_OR_URL": "Enter file path or URL",
   "FOLDERS_NOT_FOUND": "Few of the folders from your collection could not be located.\nPlease ensure the presence & re-start the app, or remove these folders before proceeding:",
   "FOLDER_NOT_FOUND": "This folder could not be located",
+  "FROM_FILE": "From file",
+  "FROM_URL": "From URL",
   "FULLSCREEN": "Enter fullscreen",
   "GENRE": "Genre",
   "GO_TO_SETTINGS": "KE PENGATURAN",
@@ -106,6 +109,7 @@
   "LYRICS": "Lirik",
   "LYRICS_NOT_FOUND": "Lirik tidak ditemukan.",
   "LYRICS_RETRIEVING": "Mengambil lirik...",
+  "MEDIA_FILES": "Media files",
   "MENU": "Menu",
   "MORE": "lebih banyak",
   "MUTE": "Bisukan",
@@ -130,6 +134,8 @@
   "NO_PLAYLISTS_FOUND": "Tidak ada daftar putar.\nBuat untuk melihatnya.",
   "N_TRACKS": "N trek",
   "OK": "OK",
+  "OPEN_FILE": "Play file",
+  "OPEN_FILE_OR_URL": "Play file or URL",
   "OPEN_IN_BROWSER": "Buka di browser",
   "OPTIONS": "Pengaturan",
   "ORDER": "Urutan",
