--- a/assets/translations/sl_SI.json
+++ b/assets/translations/sl_SI.json
@@ -10,6 +10,7 @@
   "ALBUMS_FROM_ARTIST": "Albumi od tega ustvarjalca.",
   "ALBUM_ARTIST": "Album Artist",
   "ALBUM_SINGLE": "Album",
+  "ALL_FILES": "All files",
   "ARTIST": "Skladatelji",
   "ARTIST_SINGLE": "Ustvarjalec",
   "ASCENDING": "Po abecedi naprej",
@@ -85,6 +86,8 @@
   "FILE_PATH_OR_URL": "Enter file path or URL",
   "FOLDERS_NOT_FOUND": "Few of the folders from your collection could not be located.\nPlease ensure the presence & re-start the app, or remove these folders before proceeding:",
   "FOLDER_NOT_FOUND": "This folder could not be located",
+  "FROM_FILE": "From file",
+  "FROM_URL": "From URL",
   "FULLSCREEN": "Enter fullscreen",
   "GENRE": "Genre",
   "GO_TO_SETTINGS": "POJDI V NASTAVITVE",
@@ -106,6 +109,7 @@
   "LYRICS": "Besedilo pesmi",
   "LYRICS_NOT_FOUND": "Besedilo pesmi ni bilo najdeno.",
   "LYRICS_RETRIEVING": "Pridobivanje besedila pesmi...",
+  "MEDIA_FILES": "Media files",
   "MENU": "Meni",
   "MORE": "Več",
   "MUTE": "Mute",
@@ -130,6 +134,8 @@
   "NO_PLAYLISTS_FOUND": "Nismo našli seznamov predvajanja.\nUstvari jih, če jih hočeš videti.",
   "N_TRACKS": "N pesmi",
   "OK": "OK",
+  "OPEN_FILE": "Play file",
+  "OPEN_FILE_OR_URL": "Play file or URL",
   "OPEN_IN_BROWSER": "Odpri v brskalniku",
   "OPTIONS": "Možnosti",
   "ORDER": "Vrstni red",
