--- a/assets/translations/tr_TR.json
+++ b/assets/translations/tr_TR.json
@@ -10,6 +10,7 @@
   "ALBUMS_FROM_ARTIST": "Albümler",
   "ALBUM_ARTIST": "Album Artist",
   "ALBUM_SINGLE": "Albüm",
+  "ALL_FILES": "All files",
   "ARTIST": "Sanatçılar",
   "ARTIST_SINGLE": "Sanatçı",
   "ASCENDING": "Artan",
@@ -85,6 +86,8 @@
   "FILE_PATH_OR_URL": "Enter file path or URL",
   "FOLDERS_NOT_FOUND": "Few of the folders from your collection could not be located.\nPlease ensure the presence & re-start the app, or remove these folders before proceeding:",
   "FOLDER_NOT_FOUND": "This folder could not be located",
+  "FROM_FILE": "From file",
+  "FROM_URL": "From URL",
   "FULLSCREEN": "Enter fullscreen",
   "GENRE": "Genre",
   "GO_TO_SETTINGS": "AYARLARA GİT",
@@ -106,6 +109,7 @@
   "LYRICS": "Sözler",
   "LYRICS_NOT_FOUND": "Söz bulunamadı.",
   "LYRICS_RETRIEVING": "Sözler getiriliyor...",
+  "MEDIA_FILES": "Media files",
   "MENU": "Menü",
   "MORE": "More",
   "MUTE": "Sessiz",
@@ -130,6 +134,8 @@
   "NO_PLAYLISTS_FOUND": "Oynatma listesi bulunamadı.\nBurada görmek istediğin bir oynatma listesini oluşturabilirsin.",
   "N_TRACKS": "N müzik",
   "OK": "TAMAM",
+  "OPEN_FILE": "Play file",
+  "OPEN_FILE_OR_URL": "Play file or URL",
   "OPEN_IN_BROWSER": "Open in browser",
   "OPTIONS": "Seçenekler",
   "ORDER": "Sıra",
