chore(intl): update translations

--- a/assets/translations/ru_RU.json
+++ b/assets/translations/ru_RU.json
@@ -3,7 +3,7 @@
   "ABOUT_TITLE": "О приложении",
   "ADD": "Добавить",
   "ADD_NEW_FOLDER": "Добавить папку",
-  "ADD_NEW_FOLDER_SUBTITLE": "Добавить новую папку в библиотеку.",
+  "ADD_NEW_FOLDER_SUBTITLE": "Add a new folder to your music library",
   "ADD_TO_NOW_PLAYING": "Добавить в очередь",
   "ADD_TO_PLAYLIST": "Добавить в плейлист",
   "ALBUM": "Альбомы",
@@ -103,7 +103,7 @@
   "INTERNET_ERROR": "Проверьте интернет-соединение.",
   "INVALID_PLAYLIST_URL": "Неверный URL плейлиста.",
   "KNOW_MORE": "УЗНАТЬ БОЛЬШЕ",
-  "LAST_COLLECTION_DIRECTORY_REMOVED": "Оставьте хотя бы одну папку.",
+  "LAST_COLLECTION_DIRECTORY_REMOVED": "Atleast one folder needs to stay",
   "LESS": "Меньше",
   "LISTENING_TO_MUSIC": "Слушает музыку 💜",
   "LYRICS": "Текст",
@@ -167,10 +167,10 @@
   "RECOMMENDATIONS": "Рекомендации",
   "REFRESH": "Обновить",
   "REFRESH_INFORMATION": "Проверить недавно добавленные и удаленные файлы для обновления библиотеки [быстрее].",
-  "REFRESH_SUBTITLE": "Проверяет недавно добавленные и удаленные файлы для обновления музыкальной библиотеки.",
+  "REFRESH_SUBTITLE": "Check for new & deleted files",
   "REINDEX": "Переиндексировать",
-  "REINDEX_INFORMATION": "Пересоздать библиотеку [медленнее].",
-  "REINDEX_SUBTITLE": "Очищает базу данных и полностью пересоздаёт музыкальную библиотеку.",
+  "REINDEX_INFORMATION": "Builds the music library database again [slower].",
+  "REINDEX_SUBTITLE": "Build the music library database again",
   "REMIND_ME_NEXT_TIME": "Напомнить в следующий раз",
   "REMOVE": "Удалить",
   "REMOVE_FROM_PLAYLIST": "Удалить из плейлиста",
