--- a/assets/translations/en_US.json
+++ b/assets/translations/en_US.json
@@ -3,7 +3,7 @@
   "ABOUT_TITLE": "About",
   "ADD": "Add",
   "ADD_NEW_FOLDER": "Add new folder",
-  "ADD_NEW_FOLDER_SUBTITLE": "Add a new folder to your music library.",
+  "ADD_NEW_FOLDER_SUBTITLE": "Add a new folder to your music library",
   "ADD_TO_NOW_PLAYING": "Add to now playing",
   "ADD_TO_PLAYLIST": "Add to playlist",
   "ALBUM": "Albums",
@@ -103,7 +103,7 @@
   "INTERNET_ERROR": "Check your internet connection.",
   "INVALID_PLAYLIST_URL": "An invalid playlist URL was provided.",
   "KNOW_MORE": "KNOW MORE",
-  "LAST_COLLECTION_DIRECTORY_REMOVED": "Atleast one folder needs to stay in your collection.",
+  "LAST_COLLECTION_DIRECTORY_REMOVED": "Atleast one folder needs to stay",
   "LESS": "Less",
   "LISTENING_TO_MUSIC": "Listening to music 💜",
   "LYRICS": "Lyrics",
@@ -167,10 +167,10 @@
   "RECOMMENDATIONS": "Suggestions",
   "REFRESH": "Refresh",
   "REFRESH_INFORMATION": "Just checks for the newly added & deleted files to update the music library [faster].",
-  "REFRESH_SUBTITLE": "Check for newly added & deleted music files to update the music library.",
+  "REFRESH_SUBTITLE": "Check for new & deleted files",
   "REINDEX": "Reindex",
-  "REINDEX_INFORMATION": "Builds the music library again [slower].",
-  "REINDEX_SUBTITLE": "Build the complete music library after clearing current database.",
+  "REINDEX_INFORMATION": "Builds the music library database again [slower].",
+  "REINDEX_SUBTITLE": "Build the music library database again",
   "REMIND_ME_NEXT_TIME": "Remind me next time",
   "REMOVE": "Remove",
   "REMOVE_FROM_PLAYLIST": "Remove from playlist",
