--- a/assets/translations/ja_JP.json
+++ b/assets/translations/ja_JP.json
@@ -3,7 +3,7 @@
   "ABOUT_TITLE": "このアプリについて",
   "ADD": "追加",
   "ADD_NEW_FOLDER": "新しいフォルダを追加",
-  "ADD_NEW_FOLDER_SUBTITLE": "音楽ライブラリに新しいフォルダを追加する。",
+  "ADD_NEW_FOLDER_SUBTITLE": "Add a new folder to your music library",
   "ADD_TO_NOW_PLAYING": "再生中に追加",
   "ADD_TO_PLAYLIST": "プレイリストに追加",
   "ALBUM": "アルバム",
@@ -103,7 +103,7 @@
   "INTERNET_ERROR": "インターネット接続を確認してください。",
   "INVALID_PLAYLIST_URL": "無効なプレイリストのURLが指定されました。",
   "KNOW_MORE": "もっと知る",
-  "LAST_COLLECTION_DIRECTORY_REMOVED": "コレクションには1つ以上のフォルダを残しておく必要があります。",
+  "LAST_COLLECTION_DIRECTORY_REMOVED": "Atleast one folder needs to stay",
   "LESS": "減らす",
   "LISTENING_TO_MUSIC": "音楽を聴く 💜",
   "LYRICS": "歌詞",
@@ -167,10 +167,10 @@
   "RECOMMENDATIONS": "おすすめ",
   "REFRESH": "リフレッシュ",
   "REFRESH_INFORMATION": "新しく追加されたファイルや削除されたファイルのみチェックし、音楽ライブラリを更新します [高速]",
-  "REFRESH_SUBTITLE": "新しく追加/削除されたファイルで音楽ライブラリを更新するためにチェックします。",
+  "REFRESH_SUBTITLE": "Check for new & deleted files",
   "REINDEX": "再インデックス",
-  "REINDEX_INFORMATION": "音楽ライブラリを再び構築します [低速]",
-  "REINDEX_SUBTITLE": "現在のデータベースをクリア後、完全な音楽ライブラリを構築します。",
+  "REINDEX_INFORMATION": "Builds the music library database again [slower].",
+  "REINDEX_SUBTITLE": "Build the music library database again",
   "REMIND_ME_NEXT_TIME": "次回に通知する",
   "REMOVE": "削除",
   "REMOVE_FROM_PLAYLIST": "プレイリストから削除",
