--- a/assets/translations/ja_JP.json
+++ b/assets/translations/ja_JP.json
@@ -82,12 +82,11 @@
   "EXIT_TITLE": "終了",
   "EXPERIMENTAL": "実験的",
   "EXPERIMENTAL_SUBTITLE": "これらの設定は実験的なものです",
+  "FILE": "File",
   "FILE_INFORMATION": "File information",
   "FILE_PATH_OR_URL": "Enter file path or URL",
   "FOLDERS_NOT_FOUND": "あなたのコレクションからいくつかのフォルダが見つかりませんでした。\n存在することを確認してアプリを再起動するか、続行する前にこれらのフォルダを削除してください:",
   "FOLDER_NOT_FOUND": "このフォルダは見つかりませんでした",
-  "FROM_FILE": "From file",
-  "FROM_URL": "From URL",
   "FULLSCREEN": "フルスクリーンにする",
   "GENRE": "ジャンル",
   "GO_TO_SETTINGS": "設定に移動する",
@@ -134,7 +133,6 @@
   "NO_PLAYLISTS_FOUND": "プレイリストが見つかりません\n新しくプレイリストを作成してください",
   "N_TRACKS": "N トラック",
   "OK": "OK",
-  "OPEN_FILE": "Play file",
   "OPEN_FILE_OR_URL": "Play file or URL",
   "OPEN_IN_BROWSER": "ブラウザで開く",
   "OPTIONS": "オプション",
@@ -254,6 +252,7 @@
   "UNHIGHLIGHTED_LYRICS_SIZE": "ハイライトされていない歌詞のサイズ",
   "UNMUTE": "ミュート解除",
   "UPDATE_AVAILABLE": "アップデートが利用可能: VERSION",
+  "URL": "URL",
   "USE_MODERN_NOW_PLAYING_SCREEN": "ダイナミックな背景と時間同期された歌詞を備えたモダンな\"再生中画面\"を使用する",
   "USE_THESE_CHARACTERS_TO_SEPARATE_ARTISTS": "; // / \\\\ または \\ を使うと複数のアーティストを区切れます。",
   "VALUE": "Value",
