--- a/assets/translations/pt_BR.json
+++ b/assets/translations/pt_BR.json
@@ -82,12 +82,11 @@
   "EXIT_TITLE": "Sair",
   "EXPERIMENTAL": "Experimental",
   "EXPERIMENTAL_SUBTITLE": "Essas configurações ainda não estão marcadas como estáveis",
+  "FILE": "File",
   "FILE_INFORMATION": "File information",
   "FILE_PATH_OR_URL": "Enter file path or URL",
   "FOLDERS_NOT_FOUND": "Algumas pastas da sua coleção não puderam ser localizadas.\nVerifique se elas existem e reinicie o aplicativo ou remova essas pastas antes de continuar:",
   "FOLDER_NOT_FOUND": "Esta pasta não pôde ser localizada",
-  "FROM_FILE": "From file",
-  "FROM_URL": "From URL",
   "FULLSCREEN": "Entrar em tela cheia",
   "GENRE": "Gênero",
   "GO_TO_SETTINGS": "VÁ PARA AS CONFIGURAÇÕES",
@@ -134,7 +133,6 @@
   "NO_PLAYLISTS_FOUND": "Nenhuma playlist encontrada.\nCrie alguns para vê-los lá.",
   "N_TRACKS": "N faixas",
   "OK": "OK",
-  "OPEN_FILE": "Play file",
   "OPEN_FILE_OR_URL": "Play file or URL",
   "OPEN_IN_BROWSER": "Abra no navegador",
   "OPTIONS": "Opções",
@@ -254,6 +252,7 @@
   "UNHIGHLIGHTED_LYRICS_SIZE": "Unighlighted Lyrics Size",
   "UNMUTE": "Desativar Mudo",
   "UPDATE_AVAILABLE": "Atualização disponível: VERSION",
+  "URL": "URL",
   "USE_MODERN_NOW_PLAYING_SCREEN": "Use a moderna \"Tela Reproduzindo\" com planos de fundo dinâmicos e letras sincronizadas no tempo",
   "USE_THESE_CHARACTERS_TO_SEPARATE_ARTISTS": "Usar ; // / \\\\ ou \\ para separar vários artistas.",
   "VALUE": "Value",
