--- a/assets/translations/ru_RU.json
+++ b/assets/translations/ru_RU.json
@@ -82,12 +82,11 @@
   "EXIT_TITLE": "Выход",
   "EXPERIMENTAL": "Экспериментальные",
   "EXPERIMENTAL_SUBTITLE": "Эти настройки пока что нестабильны",
+  "FILE": "File",
   "FILE_INFORMATION": "File information",
   "FILE_PATH_OR_URL": "Enter file path or URL",
   "FOLDERS_NOT_FOUND": "Не удалось найти некоторые папки из Вашей коллекции.\nПожалуйста, убедитесь в их наличии и перезапустите приложение или удалите эти папки, прежде чем продолжить:",
   "FOLDER_NOT_FOUND": "Указанная папка не найдена",
-  "FROM_FILE": "From file",
-  "FROM_URL": "From URL",
   "FULLSCREEN": "Войти в полноэкранный режим",
   "GENRE": "Жанр",
   "GO_TO_SETTINGS": "В НАСТРОЙКИ",
@@ -134,7 +133,6 @@
   "NO_PLAYLISTS_FOUND": "Плейлисты не найдены.\nСоздайте плейлист, чтобы увидеть его здесь.",
   "N_TRACKS": "N треков",
   "OK": "ОК",
-  "OPEN_FILE": "Play file",
   "OPEN_FILE_OR_URL": "Play file or URL",
   "OPEN_IN_BROWSER": "Открыть в браузере",
   "OPTIONS": "Параметры",
@@ -254,6 +252,7 @@
   "UNHIGHLIGHTED_LYRICS_SIZE": "Размер неподсвеченых строк",
   "UNMUTE": "Включить звук",
   "UPDATE_AVAILABLE": "Доступно обновление: VERSION",
+  "URL": "URL",
   "USE_MODERN_NOW_PLAYING_SCREEN": "Современный экран воспроизведения с динамическими обоями и текстами песен",
   "USE_THESE_CHARACTERS_TO_SEPARATE_ARTISTS": "Используйте ; // / \\\\ или \\ чтобы разделять исполнителей.",
   "VALUE": "Value",
