--- a/assets/translations/en_US.json
+++ b/assets/translations/en_US.json
@@ -82,12 +82,11 @@
   "EXIT_TITLE": "Exit",
   "EXPERIMENTAL": "Experimental",
   "EXPERIMENTAL_SUBTITLE": "These settings are not marked as stable yet",
+  "FILE": "File",
   "FILE_INFORMATION": "File information",
   "FILE_PATH_OR_URL": "Enter file path or URL",
   "FOLDERS_NOT_FOUND": "Few of the folders from your collection could not be located.\nPlease ensure the presence & re-start the app, or remove these folders before proceeding:",
   "FOLDER_NOT_FOUND": "This folder could not be located",
-  "FROM_FILE": "From file",
-  "FROM_URL": "From URL",
   "FULLSCREEN": "Enter fullscreen",
   "GENRE": "Genre",
   "GO_TO_SETTINGS": "GO TO SETTINGS",
@@ -117,7 +116,7 @@
   "NEXT": "Next",
   "NO": "NO",
   "NOTHING_IN_QUEUE": "There's nothing in the queue.",
-  "NOTIFICATION_LYRICS_SUBTITLE": "Show lyrics in a notification.",
+  "NOTIFICATION_LYRICS_SUBTITLE": "Show synced lyrics in a notification",
   "NOTIFICATION_LYRICS_TITLE": "Notification lyrics",
   "NOW_PLAYING": "Now playing",
   "NOW_PLAYING_NEXT_TRACK": "NEXT",
@@ -134,7 +133,6 @@
   "NO_PLAYLISTS_FOUND": "No playlists found.\nCreate some to see them there.",
   "N_TRACKS": "N tracks",
   "OK": "OKAY",
-  "OPEN_FILE": "Play file",
   "OPEN_FILE_OR_URL": "Play file or URL",
   "OPEN_IN_BROWSER": "Open in browser",
   "OPTIONS": "Options",
@@ -254,6 +252,7 @@
   "UNHIGHLIGHTED_LYRICS_SIZE": "Unighlighted Lyrics Size",
   "UNMUTE": "Unmute",
   "UPDATE_AVAILABLE": "Update available: VERSION",
+  "URL": "URL",
   "USE_MODERN_NOW_PLAYING_SCREEN": "Use modern \"Now Playing Screen\" with dynamic backgrounds & time-synced lyrics",
   "USE_THESE_CHARACTERS_TO_SEPARATE_ARTISTS": "Use ; // / \\\\ or \\ to separate multiple artists.",
   "VALUE": "Value",
