--- a/assets/translations/id_ID.json
+++ b/assets/translations/id_ID.json
@@ -82,12 +82,11 @@
   "EXIT_TITLE": "Tutup",
   "EXPERIMENTAL": "Experimental",
   "EXPERIMENTAL_SUBTITLE": "Pengaturan ini belum ditandai sebagai pengaturan stabil.",
+  "FILE": "File",
   "FILE_INFORMATION": "File information",
   "FILE_PATH_OR_URL": "Enter file path or URL",
   "FOLDERS_NOT_FOUND": "Few of the folders from your collection could not be located.\nPlease ensure the presence & re-start the app, or remove these folders before proceeding:",
   "FOLDER_NOT_FOUND": "This folder could not be located",
-  "FROM_FILE": "From file",
-  "FROM_URL": "From URL",
   "FULLSCREEN": "Enter fullscreen",
   "GENRE": "Genre",
   "GO_TO_SETTINGS": "KE PENGATURAN",
@@ -134,7 +133,6 @@
   "NO_PLAYLISTS_FOUND": "Tidak ada daftar putar.\nBuat untuk melihatnya.",
   "N_TRACKS": "N trek",
   "OK": "OK",
-  "OPEN_FILE": "Play file",
   "OPEN_FILE_OR_URL": "Play file or URL",
   "OPEN_IN_BROWSER": "Buka di browser",
   "OPTIONS": "Pengaturan",
@@ -254,6 +252,7 @@
   "UNHIGHLIGHTED_LYRICS_SIZE": "Unighlighted Lyrics Size",
   "UNMUTE": "Hidupkan suara",
   "UPDATE_AVAILABLE": "Pembaruan tersedia: VERSI",
+  "URL": "URL",
   "USE_MODERN_NOW_PLAYING_SCREEN": "Use modern \"Now Playing Screen\" with dynamic backgrounds & time-synced lyrics",
   "USE_THESE_CHARACTERS_TO_SEPARATE_ARTISTS": "Use ; // / \\\\ or \\ to separate multiple artists.",
   "VALUE": "Value",
