--- a/assets/translations/zh_CN.json
+++ b/assets/translations/zh_CN.json
@@ -82,12 +82,11 @@
   "EXIT_TITLE": "退出",
   "EXPERIMENTAL": "实验性",
   "EXPERIMENTAL_SUBTITLE": "这些设置尚未标记为稳定",
+  "FILE": "File",
   "FILE_INFORMATION": "File information",
   "FILE_PATH_OR_URL": "Enter file path or URL",
   "FOLDERS_NOT_FOUND": "Few of the folders from your collection could not be located.\nPlease ensure the presence & re-start the app, or remove these folders before proceeding:",
   "FOLDER_NOT_FOUND": "This folder could not be located",
-  "FROM_FILE": "From file",
-  "FROM_URL": "From URL",
   "FULLSCREEN": "Enter fullscreen",
   "GENRE": "Genre",
   "GO_TO_SETTINGS": "前往设置",
@@ -134,7 +133,6 @@
   "NO_PLAYLISTS_FOUND": "未找到播放列表。\n创建后将会在此显示。",
   "N_TRACKS": "N 首曲目",
   "OK": "确定",
-  "OPEN_FILE": "Play file",
   "OPEN_FILE_OR_URL": "Play file or URL",
   "OPEN_IN_BROWSER": "在浏览器中打开",
   "OPTIONS": "选项",
@@ -254,6 +252,7 @@
   "UNHIGHLIGHTED_LYRICS_SIZE": "Unighlighted Lyrics Size",
   "UNMUTE": "关闭静音",
   "UPDATE_AVAILABLE": "可用更新：VERSION",
+  "URL": "URL",
   "USE_MODERN_NOW_PLAYING_SCREEN": "Use modern \"Now Playing Screen\" with dynamic backgrounds & time-synced lyrics",
   "USE_THESE_CHARACTERS_TO_SEPARATE_ARTISTS": "Use ; // / \\\\ or \\ to separate multiple artists.",
   "VALUE": "Value",
