chore(intl): tweak english translations

--- a/assets/translations/en_US.json
+++ b/assets/translations/en_US.json
@@ -15,18 +15,18 @@
   "ARTIST_SINGLE": "Artist",
   "ASCENDING": "Ascending",
   "AUTOMATICALLY_ADD_OTHER_SONGS_TO_NOW_PLAYING": "Start playing other music from collection after queue completion",
-  "AUTOMATICALLY_ADD_OTHER_SONGS_TO_NOW_PLAYING_TITLE": "Enable seamless playback",
-  "AUTO_REFRESH_SETTING": "Check for new files on fresh start",
-  "AUTO_REFRESH_SETTING_TITLE": "Automatic music lookup on start",
+  "AUTOMATICALLY_ADD_OTHER_SONGS_TO_NOW_PLAYING_TITLE": "Shuffle tracks after queue",
+  "AUTO_REFRESH_SETTING": "Check for new files at launch",
+  "AUTO_REFRESH_SETTING_TITLE": "Refresh music at launch",
   "AWESOME": "Awesome!",
   "A_TO_Z": "A to Z",
   "BACKGROUND_ARTWORK_SUBTITLE": "Show minimal artwork behind content on the screen",
-  "BACKGROUND_ARTWORK_TITLE": "Enable background artwork",
+  "BACKGROUND_ARTWORK_TITLE": "Show scaffold background",
   "BETA": "Beta",
   "BUFFERING": "Buffering...",
   "CANCEL": "CANCEL",
   "CHANGE_NOW_PLAYING_BAR_COLOR_BASED_ON_MUSIC": "Change \"Now Playing Bar\" color based on music",
-  "CHANGE_NOW_PLAYING_BAR_COLOR_BASED_ON_MUSIC_TITLE": "Dynamic Now Playing Bar coloring",
+  "CHANGE_NOW_PLAYING_BAR_COLOR_BASED_ON_MUSIC_TITLE": "Navigation bar auto-color",
   "COLLECTION": "Collection",
   "COLLECTION_ALBUM_DELETE_DIALOG_BODY": "Delete the album \"NAME\"?",
   "COLLECTION_ALBUM_DELETE_DIALOG_HEADER": "Delete",
@@ -132,7 +132,7 @@
   "NO_INTERNET_TITLE": "No Internet",
   "NO_PLAYLISTS_FOUND": "No playlists found.\nCreate some to see them there.",
   "N_TRACKS": "N tracks",
-  "OK": "OKAY",
+  "OK": "OK",
   "OPEN_FILE_OR_URL": "Play file or URL",
   "OPEN_IN_BROWSER": "Open in browser",
   "OPTIONS": "Options",
@@ -226,7 +226,7 @@
   "SHOW_ALBUM": "Show album",
   "SHOW_IN_FILE_MANAGER": "Show in file manager",
   "SHOW_LYRICS": "Show lyrics",
-  "SHOW_NOW_PLAYING_AFTER_PLAYING": "Jump to Now Playing Screen on play",
+  "SHOW_NOW_PLAYING_AFTER_PLAYING": "Jump to \"Now Playing Screen\"",
   "SHOW_NOW_PLAYING_AFTER_PLAYING_SUBTITLE": "Show \"Now Playing Screen\" after a track is selected for playing",
   "SHOW_NOW_PLAYING_SCREEN": "Show \"Now Playing Screen\"",
   "SHOW_TRACK_PROGRESS_ON_TASKBAR": "Enable taskbar indicator",
