--- a/assets/translations/pt_BR.json
+++ b/assets/translations/pt_BR.json
@@ -63,8 +63,8 @@
   "DISCOVERING_FILES": "Descobrindo arquivos...",
   "DONATE": "Doar",
   "DONE": "Feito",
-  "DOWNLOAD": "Download now",
-  "DOWNLOAD_UPDATE": "Update",
+  "DOWNLOAD": "Baixar agora",
+  "DOWNLOAD_UPDATE": "Atualizar",
   "EDIT_DETAILS": "Editar detalhes",
   "ENABLE_125_SCALING": "Ativar escala de 125%.",
   "ENABLE_ACRYLIC_BLUR": "Ativar desfoque acrílico do Windows.",
@@ -82,7 +82,7 @@
   "GENRE": "Gênero",
   "GO_TO_SETTINGS": "VÁ PARA AS CONFIGURAÇÕES",
   "HIDE_LYRICS": "Ocultar letras",
-  "HIGHLIGHTED_LYRICS_SIZE": "Highlighted Lyrics Size",
+  "HIGHLIGHTED_LYRICS_SIZE": "Destacar Tamanho da Letra",
   "IMPORT_PLAYLIST_FROM_WEB": "Importar do YouTube Music",
   "IMPORT_PLAYLIST_SUBTITLE": "Insira o URL da playlist",
   "IMPORT_PLAYLIST_TITLE": "Importar Playlist",
@@ -151,14 +151,14 @@
   "REINDEX": "Reindexar",
   "REINDEX_INFORMATION": "Construir a biblioteca de música novamente (mais lento)",
   "REINDEX_SUBTITLE": "Construir a biblioteca de música completa depois de limpar o banco de dados atual.",
-  "REMIND_ME_NEXT_TIME": "Remind me next time",
+  "REMIND_ME_NEXT_TIME": "Lembre-me da próxima vez",
   "REMOVE": "Remover",
   "REMOVE_FROM_PLAYLIST": "Remover da playlist",
   "REPEAT": "Repetir",
   "RESET_PITCH": "Redefinir tom",
   "RESET_SPEED": "Redefinir velocidade",
-  "RESTORE": "Restore",
-  "RESTORE_DEFAULTS": "Restore Defaults",
+  "RESTORE": "Restaurar",
+  "RESTORE_DEFAULTS": "Restaurar Padrões",
   "RESULTS_FOR_QUERY": "Resultados para \"QUERY\"",
   "RETRIEVING_INFO": "Recuperação de informação",
   "RETRIEVING_LINK": "Recuperando fluxo",
