chore(intl): update translations

--- a/assets/translations/en_US.json
+++ b/assets/translations/en_US.json
@@ -14,7 +14,7 @@
   "ARTIST": "Artists",
   "ARTIST_SINGLE": "Artist",
   "ASCENDING": "Ascending",
-  "AUTOMATICALLY_ADD_OTHER_SONGS_TO_NOW_PLAYING": "Start playing other music from collection after queue completion",
+  "AUTOMATICALLY_ADD_OTHER_SONGS_TO_NOW_PLAYING": "Start playing other music from library after queue completion",
   "AUTOMATICALLY_ADD_OTHER_SONGS_TO_NOW_PLAYING_TITLE": "Shuffle tracks after queue",
   "AUTO_REFRESH_SETTING": "Check for new files at launch",
   "AUTO_REFRESH_SETTING_TITLE": "Refresh music at launch",
@@ -38,8 +38,8 @@
   "COLLECTION_OTHER_SUBHEADER_TRACK": "More tracks",
   "COLLECTION_PLAYLIST_DELETE_DIALOG_BODY": "Delete the playlist \"NAME\"?",
   "COLLECTION_PLAYLIST_DELETE_DIALOG_HEADER": "Delete",
-  "COLLECTION_SEARCH_LABEL": "Lookup Music",
-  "COLLECTION_SEARCH_NO_RESULTS_SUBTITLE": "Nothing like that could be found in your collection",
+  "COLLECTION_SEARCH_LABEL": "Lookup music",
+  "COLLECTION_SEARCH_NO_RESULTS_SUBTITLE": "Nothing like that could be found in your library",
   "COLLECTION_SEARCH_NO_RESULTS_TITLE": "No Results",
   "COLLECTION_SEARCH_WELCOME": "Search albums, tracks or artists...",
   "COLLECTION_TOP_BODY_ALBUM_EMPTY": "Search & save some music to see it here.\nSpin the refresh to see new stuff.",
@@ -85,7 +85,7 @@
   "FILE": "File",
   "FILE_INFORMATION": "File information",
   "FILE_PATH_OR_URL": "Enter file path or URL",
-  "FOLDERS_NOT_FOUND": "Few of the folders from your collection could not be located.\nPlease ensure the presence & re-start the app, or remove these folders before proceeding:",
+  "FOLDERS_NOT_FOUND": "Few of the folders from your library could not be located.\nPlease ensure the presence & re-start the app, or remove these folders before proceeding:",
   "FOLDER_NOT_FOUND": "This folder could not be located",
   "FULLSCREEN": "Enter fullscreen",
   "GENRE": "Genre",
@@ -94,6 +94,7 @@
   "HIDE_LYRICS": "Hide lyrics",
   "HIGHLIGHTED_LYRICS_SIZE": "Highlighted Lyrics Size",
   "IMAGES": "Images",
+  "IMPORT": "Import",
   "IMPORT_PLAYLIST_SUBTITLE": "Enter the playlist URL",
   "IMPORT_PLAYLIST_TITLE": "Import Playlist",
   "INDEXING_ALREADY_GOING_ON_SUBTITLE": "An indexing related operation is already going on. Please wait.",
@@ -109,6 +110,8 @@
   "LYRICS_RETRIEVING": "Retrieving lyrics...",
   "MEDIA_FILES": "Media files",
   "MENU": "Menu",
+  "MINIMUM_FILE_SIZE": "Minimum file size",
+  "MINIMUM_FILE_SIZE_WARNING": "Your music library must be reindexed after changing the minimum file size.",
   "MORE": "More",
   "MUTE": "Mute",
   "M_TRACKS_AND_N_ALBUMS": "M tracks & N albums",
@@ -123,9 +126,9 @@
   "NOW_PLAYING_PREVIOUS_TRACK": "PREVIOUS",
   "NOW_PLAYING_SCREEN": "Now Playing Screen",
   "NOW_PLAYING_SCREEN_SETTING_SUBTITLE": "Settings related to the \"Now Playing Screen\"",
-  "NOW_YOU_ARE_GOOD_TO_GO_BACK": "Now you're good to go back.",
-  "NO_COLLECTION_SUBTITLE": "No music found.\nChange where to look for the music from settings.",
-  "NO_COLLECTION_TITLE": "Empty Collection",
+  "NOW_YOU_ARE_GOOD_TO_GO_BACK": "Now you're good to go back",
+  "NO_COLLECTION_SUBTITLE": "Change where to look for the music from settings",
+  "NO_COLLECTION_TITLE": "No music found",
   "NO_DOWNLOAD_UPDATE": "Your app is already updated",
   "NO_INTERNET_SUBTITLE": "Check your connection.",
   "NO_INTERNET_TITLE": "No Internet",
@@ -184,7 +187,7 @@
   "SAVE_TO_DOWNLOADS": "Save to downloads",
   "SD_CARD": "SD Card",
   "SEARCH": "Search",
-  "SEARCH_COLLECTION": "Search collection",
+  "SEARCH_COLLECTION": "Search library",
   "SEARCH_HISTORY_SUBHEADER": "Your recent searches",
   "SEARCH_NO_RECENT_SEARCHES": "Your recent searches will show here",
   "SEARCH_RESULT_LOADER_LABEL": "Getting your music...",
@@ -203,8 +206,8 @@
   "SETTING_GITHUB": "GITHUB",
   "SETTING_INDEXING_DONE": "Indexed",
   "SETTING_INDEXING_LINEAR_PROGRESS_INDICATOR": "Indexed NUMBER_STRING of TOTAL_STRING tracks...",
-  "SETTING_INDEXING_SUBTITLE": "Include more folders in your music collection",
-  "SETTING_INDEXING_TITLE": "Collection",
+  "SETTING_INDEXING_SUBTITLE": "Include more folders in your music library",
+  "SETTING_INDEXING_TITLE": "Library",
   "SETTING_INDEXING_WARNING": "Do not interrupt the process.",
   "SETTING_LANGUAGE_PROVIDERS_SUBTITLE": "Thanks a lot for your support to the app.",
   "SETTING_LANGUAGE_PROVIDERS_TITLE": "Translation Providers",
