--- a/assets/translations/zh_CN.json
+++ b/assets/translations/zh_CN.json
@@ -94,6 +94,7 @@
   "HIDE_LYRICS": "Hide lyrics",
   "HIGHLIGHTED_LYRICS_SIZE": "Highlighted Lyrics Size",
   "IMAGES": "Images",
+  "IMPORT": "Import",
   "IMPORT_PLAYLIST_SUBTITLE": "Enter the playlist URL",
   "IMPORT_PLAYLIST_TITLE": "Import Playlist",
   "INDEXING_ALREADY_GOING_ON_SUBTITLE": "与索引相关的操作已经在进行。请稍候。",
@@ -109,6 +110,8 @@
   "LYRICS_RETRIEVING": "获取歌词中...",
   "MEDIA_FILES": "Media files",
   "MENU": "菜单",
+  "MINIMUM_FILE_SIZE": "Minimum file size",
+  "MINIMUM_FILE_SIZE_WARNING": "Your music library must be reindexed after changing the minimum file size.",
   "MORE": "更多",
   "MUTE": "切换静音",
   "M_TRACKS_AND_N_ALBUMS": "M 首曲目和 N 张专辑",
