--- a/assets/translations/az_AZ.json
+++ b/assets/translations/az_AZ.json
@@ -94,6 +94,7 @@
   "HIDE_LYRICS": "Hide lyrics",
   "HIGHLIGHTED_LYRICS_SIZE": "Highlighted Lyrics Size",
   "IMAGES": "Images",
+  "IMPORT": "Import",
   "IMPORT_PLAYLIST_SUBTITLE": "Enter the playlist URL",
   "IMPORT_PLAYLIST_TITLE": "Import Playlist",
   "INDEXING_ALREADY_GOING_ON_SUBTITLE": "An indexing related operation is already going on. Please wait.",
@@ -109,6 +110,8 @@
   "LYRICS_RETRIEVING": "Sözlər getirilir...",
   "MEDIA_FILES": "Media files",
   "MENU": "Menyu",
+  "MINIMUM_FILE_SIZE": "Minimum file size",
+  "MINIMUM_FILE_SIZE_WARNING": "Your music library must be reindexed after changing the minimum file size.",
   "MORE": "More",
   "MUTE": "Səssiz",
   "M_TRACKS_AND_N_ALBUMS": "M Müusiqi ilə N Albom",
