--- a/assets/translations/de_DE.json
+++ b/assets/translations/de_DE.json
@@ -94,6 +94,7 @@
   "HIDE_LYRICS": "Hide lyrics",
   "HIGHLIGHTED_LYRICS_SIZE": "Highlighted Lyrics Size",
   "IMAGES": "Images",
+  "IMPORT": "Import",
   "IMPORT_PLAYLIST_SUBTITLE": "Enter the playlist URL",
   "IMPORT_PLAYLIST_TITLE": "Import Playlist",
   "INDEXING_ALREADY_GOING_ON_SUBTITLE": "Ein mit der Indizierung verbundener Vorgang ist bereits im Gange. Bitte gedulden Sie sich noch etwas.",
@@ -109,6 +110,8 @@
   "LYRICS_RETRIEVING": "Abrufen von Lyrics...",
   "MEDIA_FILES": "Media files",
   "MENU": "Menü",
+  "MINIMUM_FILE_SIZE": "Minimum file size",
+  "MINIMUM_FILE_SIZE_WARNING": "Your music library must be reindexed after changing the minimum file size.",
   "MORE": "Mehr",
   "MUTE": "Stumm",
   "M_TRACKS_AND_N_ALBUMS": "M Songs & N Alben",
