--- a/assets/translations/fr_FR.json
+++ b/assets/translations/fr_FR.json
@@ -94,6 +94,7 @@
   "HIDE_LYRICS": "Hide lyrics",
   "HIGHLIGHTED_LYRICS_SIZE": "Highlighted Lyrics Size",
   "IMAGES": "Images",
+  "IMPORT": "Import",
   "IMPORT_PLAYLIST_SUBTITLE": "Enter the playlist URL",
   "IMPORT_PLAYLIST_TITLE": "Import Playlist",
   "INDEXING_ALREADY_GOING_ON_SUBTITLE": "Une opération d'indexation est déjà en cours. Veuillez patienter.",
@@ -109,6 +110,8 @@
   "LYRICS_RETRIEVING": "Récupération des paroles...",
   "MEDIA_FILES": "Media files",
   "MENU": "Menu",
+  "MINIMUM_FILE_SIZE": "Minimum file size",
+  "MINIMUM_FILE_SIZE_WARNING": "Your music library must be reindexed after changing the minimum file size.",
   "MORE": "Plus",
   "MUTE": "Couper le son",
   "M_TRACKS_AND_N_ALBUMS": "M pistes & N albums",
