--- a/assets/translations/id_ID.json
+++ b/assets/translations/id_ID.json
@@ -94,6 +94,7 @@
   "HIDE_LYRICS": "Hide lyrics",
   "HIGHLIGHTED_LYRICS_SIZE": "Highlighted Lyrics Size",
   "IMAGES": "Images",
+  "IMPORT": "Import",
   "IMPORT_PLAYLIST_SUBTITLE": "Enter the playlist URL",
   "IMPORT_PLAYLIST_TITLE": "Import Playlist",
   "INDEXING_ALREADY_GOING_ON_SUBTITLE": "Sedang menjalankan operasi yang berhubungan dengan pendaftaran. Mohon tunggu.",
@@ -109,6 +110,8 @@
   "LYRICS_RETRIEVING": "Mengambil lirik...",
   "MEDIA_FILES": "Media files",
   "MENU": "Menu",
+  "MINIMUM_FILE_SIZE": "Minimum file size",
+  "MINIMUM_FILE_SIZE_WARNING": "Your music library must be reindexed after changing the minimum file size.",
   "MORE": "lebih banyak",
   "MUTE": "Bisukan",
   "M_TRACKS_AND_N_ALBUMS": "M trek & N album",
