--- a/assets/translations/ja_JP.json
+++ b/assets/translations/ja_JP.json
@@ -94,6 +94,7 @@
   "HIDE_LYRICS": "歌詞を非表示",
   "HIGHLIGHTED_LYRICS_SIZE": "ハイライトされている歌詞のサイズ",
   "IMAGES": "Images",
+  "IMPORT": "Import",
   "IMPORT_PLAYLIST_SUBTITLE": "プレイリストのURLを入力",
   "IMPORT_PLAYLIST_TITLE": "プレイリストをインポート",
   "INDEXING_ALREADY_GOING_ON_SUBTITLE": "すでにインデックス関連の動作が行われています。しばらくお待ちください。",
@@ -109,6 +110,8 @@
   "LYRICS_RETRIEVING": "歌詞を取得中...",
   "MEDIA_FILES": "Media files",
   "MENU": "メニュー",
+  "MINIMUM_FILE_SIZE": "Minimum file size",
+  "MINIMUM_FILE_SIZE_WARNING": "Your music library must be reindexed after changing the minimum file size.",
   "MORE": "もっと",
   "MUTE": "ミュート",
   "M_TRACKS_AND_N_ALBUMS": "M トラック & N アルバム",
