--- a/assets/translations/pt_BR.json
+++ b/assets/translations/pt_BR.json
@@ -94,6 +94,7 @@
   "HIDE_LYRICS": "Ocultar letras",
   "HIGHLIGHTED_LYRICS_SIZE": "Highlighted Lyrics Size",
   "IMAGES": "Images",
+  "IMPORT": "Import",
   "IMPORT_PLAYLIST_SUBTITLE": "Insira o URL da playlist",
   "IMPORT_PLAYLIST_TITLE": "Importar Playlist",
   "INDEXING_ALREADY_GOING_ON_SUBTITLE": "Uma operação relacionada à indexação já está em andamento. Por favor, aguarde.",
@@ -109,6 +110,8 @@
   "LYRICS_RETRIEVING": "Baixando letras...",
   "MEDIA_FILES": "Media files",
   "MENU": "Menu",
+  "MINIMUM_FILE_SIZE": "Minimum file size",
+  "MINIMUM_FILE_SIZE_WARNING": "Your music library must be reindexed after changing the minimum file size.",
   "MORE": "Mais",
   "MUTE": "Mudo",
   "M_TRACKS_AND_N_ALBUMS": "M faixas & N albums",
