--- a/assets/translations/ru_RU.json
+++ b/assets/translations/ru_RU.json
@@ -94,6 +94,7 @@
   "HIDE_LYRICS": "Скрыть текст",
   "HIGHLIGHTED_LYRICS_SIZE": "Размер подсвеченых строк",
   "IMAGES": "Images",
+  "IMPORT": "Import",
   "IMPORT_PLAYLIST_SUBTITLE": "Введите URL плейлиста",
   "IMPORT_PLAYLIST_TITLE": "Импорт плейлиста",
   "INDEXING_ALREADY_GOING_ON_SUBTITLE": "В данный момент выполняется индексация. Пожалуйста, подождите.",
@@ -109,6 +110,8 @@
   "LYRICS_RETRIEVING": "Получение...",
   "MEDIA_FILES": "Media files",
   "MENU": "Меню",
+  "MINIMUM_FILE_SIZE": "Minimum file size",
+  "MINIMUM_FILE_SIZE_WARNING": "Your music library must be reindexed after changing the minimum file size.",
   "MORE": "Больше",
   "MUTE": "Отключить звук",
   "M_TRACKS_AND_N_ALBUMS": "M треков & N альбомов",
