--- a/assets/translations/sl_SI.json
+++ b/assets/translations/sl_SI.json
@@ -94,6 +94,7 @@
   "HIDE_LYRICS": "Hide lyrics",
   "HIGHLIGHTED_LYRICS_SIZE": "Highlighted Lyrics Size",
   "IMAGES": "Images",
+  "IMPORT": "Import",
   "IMPORT_PLAYLIST_SUBTITLE": "Enter the playlist URL",
   "IMPORT_PLAYLIST_TITLE": "Import Playlist",
   "INDEXING_ALREADY_GOING_ON_SUBTITLE": "Operacija indeksiranja že poteka. Prosimo, počakajte.",
@@ -109,6 +110,8 @@
   "LYRICS_RETRIEVING": "Pridobivanje besedila pesmi...",
   "MEDIA_FILES": "Media files",
   "MENU": "Meni",
+  "MINIMUM_FILE_SIZE": "Minimum file size",
+  "MINIMUM_FILE_SIZE_WARNING": "Your music library must be reindexed after changing the minimum file size.",
   "MORE": "Več",
   "MUTE": "Mute",
   "M_TRACKS_AND_N_ALBUMS": "M pesmi & N albumov",
