chore(intl): update translations

--- a/assets/translations/de_DE.json
+++ b/assets/translations/de_DE.json
@@ -55,7 +55,7 @@
   "COPY_AS_JSON": "Copy as JSON",
   "COPY_LINK": "Link kopieren",
   "CREATE": "erstellen",
-  "CREATE_NEW_PLAYLIST": "NEUE PLAYLIST ERSTELLEN",
+  "CREATE_NEW_PLAYLIST": "Create new playlist",
   "CREATE_PLAYLIST_SUBHEADER": "Erstellen Sie eine neue Playlist, um Ihre Songs hinzuzufügen",
   "DATE_ADDED": "Datum hinzugefügt",
   "DELETE": "Löschen",
@@ -165,6 +165,7 @@
   "READ": "Read",
   "READ_METADATA": "Read metadata",
   "RECOMMENDATIONS": "Empfehlungen",
+  "RECOMMENDED_HINT": "(Recommended)",
   "REFRESH": "Aktualisieren",
   "REFRESH_INFORMATION": "Überprüft die neu hinzugefügten & gelöschten Dateien und aktualisiert die Musikbibliothek [schneller]",
   "REFRESH_SUBTITLE": "Überprüfung auf neu hinzugekommene und gelöschte Musikdateien zum Aktualisieren der Musikbibliothek.",
