--- a/assets/translations/fa_IR.json
+++ b/assets/translations/fa_IR.json
@@ -55,7 +55,7 @@
   "COPY_AS_JSON": "Copy as JSON",
   "COPY_LINK": "Copy link",
   "CREATE": "ساخت",
-  "CREATE_NEW_PLAYLIST": "ساختن لیست پخش جدید",
+  "CREATE_NEW_PLAYLIST": "Create new playlist",
   "CREATE_PLAYLIST_SUBHEADER": "ساخت لیست پخش جدید برای اضافه شدن موزیک‌های شما",
   "DATE_ADDED": "تاریخ اضافه شد.",
   "DELETE": "حذف",
@@ -165,6 +165,7 @@
   "READ": "Read",
   "READ_METADATA": "Read metadata",
   "RECOMMENDATIONS": "پیشنهادات",
+  "RECOMMENDED_HINT": "(Recommended)",
   "REFRESH": "بروزرسانی",
   "REFRESH_INFORMATION": "Just checks for the newly added & deleted files to update the music library [faster].",
   "REFRESH_SUBTITLE": "Check for newly added & deleted music files to update the music library.",
