--- a/assets/translations/fr_FR.json
+++ b/assets/translations/fr_FR.json
@@ -55,7 +55,7 @@
   "COPY_AS_JSON": "Copy as JSON",
   "COPY_LINK": "Copier le lien",
   "CREATE": "Créer",
-  "CREATE_NEW_PLAYLIST": "Créer une nouvelle playlist",
+  "CREATE_NEW_PLAYLIST": "Create new playlist",
   "CREATE_PLAYLIST_SUBHEADER": "Créer une nouvelle playlist pour y ajouter votre musique",
   "DATE_ADDED": "Date d'ajout",
   "DELETE": "Supprimer",
@@ -165,6 +165,7 @@
   "READ": "Read",
   "READ_METADATA": "Read metadata",
   "RECOMMENDATIONS": "Recommandations",
+  "RECOMMENDED_HINT": "(Recommended)",
   "REFRESH": "Actualiser",
   "REFRESH_INFORMATION": "Vérifier uniquement les fichiers ajoutés et supprimés pour mettre à jour la bibliothèque musicale (plus rapide)",
   "REFRESH_SUBTITLE": "Vérifier les fichiers ajoutés et supprimés pour mettre à jour la bibliothèque musicale.",
