--- a/assets/translations/id_ID.json
+++ b/assets/translations/id_ID.json
@@ -55,7 +55,7 @@
   "COPY_AS_JSON": "Copy as JSON",
   "COPY_LINK": "Salin link",
   "CREATE": "Buat",
-  "CREATE_NEW_PLAYLIST": "BUAT DAFTAR PUTAR BARU",
+  "CREATE_NEW_PLAYLIST": "Create new playlist",
   "CREATE_PLAYLIST_SUBHEADER": "daftar putar baru untuk menambahkan musik anda",
   "DATE_ADDED": "Tanggal ditambahkan",
   "DELETE": "Hapus",
@@ -165,6 +165,7 @@
   "READ": "Read",
   "READ_METADATA": "Read metadata",
   "RECOMMENDATIONS": "Rekomendasi",
+  "RECOMMENDED_HINT": "(Recommended)",
   "REFRESH": "Segarkan",
   "REFRESH_INFORMATION": "Hanya cek file musik yang baru ditambahkan dan dihapus untuk memperbarui perpustakaan musik (lebih cepat)",
   "REFRESH_SUBTITLE": "Cek file musik yang baru ditambahkan dan dihapus untuk memperbarui perpustakaan musik.",
