--- a/assets/translations/ja_JP.json
+++ b/assets/translations/ja_JP.json
@@ -55,7 +55,7 @@
   "COPY_AS_JSON": "Copy as JSON",
   "COPY_LINK": "リンクをコピー",
   "CREATE": "作成",
-  "CREATE_NEW_PLAYLIST": "新しいプレイリストを作成",
+  "CREATE_NEW_PLAYLIST": "Create new playlist",
   "CREATE_PLAYLIST_SUBHEADER": "新しいプレイリストを作成して音楽を追加します",
   "DATE_ADDED": "追加日時",
   "DELETE": "削除",
@@ -165,6 +165,7 @@
   "READ": "Read",
   "READ_METADATA": "Read metadata",
   "RECOMMENDATIONS": "おすすめ",
+  "RECOMMENDED_HINT": "(Recommended)",
   "REFRESH": "リフレッシュ",
   "REFRESH_INFORMATION": "新しく追加されたファイルや削除されたファイルのみチェックし、音楽ライブラリを更新します [高速]",
   "REFRESH_SUBTITLE": "Check for new & deleted files",
