--- a/assets/translations/pt_BR.json
+++ b/assets/translations/pt_BR.json
@@ -55,7 +55,7 @@
   "COPY_AS_JSON": "Copy as JSON",
   "COPY_LINK": "Copiar link",
   "CREATE": "Criar",
-  "CREATE_NEW_PLAYLIST": "CRIAR NOVA PLAYLIST",
+  "CREATE_NEW_PLAYLIST": "Create new playlist",
   "CREATE_PLAYLIST_SUBHEADER": "Crie uma nova playlist para adicionar sua música",
   "DATE_ADDED": "Data adicionada",
   "DELETE": "Deletar",
@@ -165,6 +165,7 @@
   "READ": "Read",
   "READ_METADATA": "Read metadata",
   "RECOMMENDATIONS": "Recomendações",
+  "RECOMMENDED_HINT": "(Recommended)",
   "REFRESH": "Atualizar",
   "REFRESH_INFORMATION": "Apenas verifica os novos arquivos adicionados e excluídos para atualizar a biblioteca de músicas (mais rápido)",
   "REFRESH_SUBTITLE": "Verifique se há arquivos de música recém-adicionados e excluídos para atualizar a biblioteca de músicas.",
