--- a/assets/translations/ru_RU.json
+++ b/assets/translations/ru_RU.json
@@ -55,7 +55,7 @@
   "COPY_AS_JSON": "Copy as JSON",
   "COPY_LINK": "Копировать ссылку",
   "CREATE": "Создать",
-  "CREATE_NEW_PLAYLIST": "СОЗДАТЬ НОВЫЙ ПЛЕЙЛИСТ",
+  "CREATE_NEW_PLAYLIST": "Create new playlist",
   "CREATE_PLAYLIST_SUBHEADER": "Создайте новый плейлист, чтобы сортировать музыку",
   "DATE_ADDED": "По дате добавления",
   "DELETE": "Удалить",
@@ -165,6 +165,7 @@
   "READ": "Read",
   "READ_METADATA": "Read metadata",
   "RECOMMENDATIONS": "Рекомендации",
+  "RECOMMENDED_HINT": "(Recommended)",
   "REFRESH": "Обновить",
   "REFRESH_INFORMATION": "Проверить недавно добавленные и удаленные файлы для обновления библиотеки [быстрее].",
   "REFRESH_SUBTITLE": "Check for new & deleted files",
