--- a/assets/translations/sl_SI.json
+++ b/assets/translations/sl_SI.json
@@ -55,7 +55,7 @@
   "COPY_AS_JSON": "Copy as JSON",
   "COPY_LINK": "Copy link",
   "CREATE": "Ustvari",
-  "CREATE_NEW_PLAYLIST": "USTVARI NOV SEZNAM PREDVAJANJA",
+  "CREATE_NEW_PLAYLIST": "Create new playlist",
   "CREATE_PLAYLIST_SUBHEADER": "Ustvari nov seznam predvajanja, da lahko dodaš svojo glasbo",
   "DATE_ADDED": "Po datumu prenosa",
   "DELETE": "Izbriši",
@@ -165,6 +165,7 @@
   "READ": "Read",
   "READ_METADATA": "Read metadata",
   "RECOMMENDATIONS": "Priporočeno",
+  "RECOMMENDED_HINT": "(Recommended)",
   "REFRESH": "OSVEŽI",
   "REFRESH_INFORMATION": "Samo preveri za nove & izbrisane datoteke za posodobitev glasbene zbirke [hitreje]",
   "REFRESH_SUBTITLE": "Check for newly added & deleted music files to update the music library.",
