--- a/assets/translations/sv_SE.json
+++ b/assets/translations/sv_SE.json
@@ -55,7 +55,7 @@
   "COPY_AS_JSON": "Copy as JSON",
   "COPY_LINK": "Copy link",
   "CREATE": "Skapa",
-  "CREATE_NEW_PLAYLIST": "SKAPA NY SPELLISTA",
+  "CREATE_NEW_PLAYLIST": "Create new playlist",
   "CREATE_PLAYLIST_SUBHEADER": "Skapa ny spellista för att lägga till din musik",
   "DATE_ADDED": "Datum tillagd",
   "DELETE": "Radera",
@@ -165,6 +165,7 @@
   "READ": "Read",
   "READ_METADATA": "Read metadata",
   "RECOMMENDATIONS": "Rekommenderat",
+  "RECOMMENDED_HINT": "(Recommended)",
   "REFRESH": "UPPDATERA",
   "REFRESH_INFORMATION": "Just checks for the newly added & deleted files to update the music library [faster].",
   "REFRESH_SUBTITLE": "Check for newly added & deleted music files to update the music library.",
