--- a/assets/translations/zh_CN.json
+++ b/assets/translations/zh_CN.json
@@ -55,7 +55,7 @@
   "COPY_AS_JSON": "Copy as JSON",
   "COPY_LINK": "复制链接",
   "CREATE": "创建",
-  "CREATE_NEW_PLAYLIST": "创建新的播放列表",
+  "CREATE_NEW_PLAYLIST": "Create new playlist",
   "CREATE_PLAYLIST_SUBHEADER": "创建新的播放列表以添加您的歌曲",
   "DATE_ADDED": "添加日期",
   "DELETE": "删除",
@@ -165,6 +165,7 @@
   "READ": "Read",
   "READ_METADATA": "Read metadata",
   "RECOMMENDATIONS": "推荐",
+  "RECOMMENDED_HINT": "(Recommended)",
   "REFRESH": "刷新",
   "REFRESH_INFORMATION": "仅检查新添加或删除的文件即可更新音乐库（更快）",
   "REFRESH_SUBTITLE": "检查新添加和删除的音乐文件以更新音乐库。",
