--- a/assets/translations/az_AZ.json
+++ b/assets/translations/az_AZ.json
@@ -55,7 +55,7 @@
   "COPY_AS_JSON": "Copy as JSON",
   "COPY_LINK": "Copy link",
   "CREATE": "Yarat",
-  "CREATE_NEW_PLAYLIST": "Yeni oynatma sırası yarat",
+  "CREATE_NEW_PLAYLIST": "Create new playlist",
   "CREATE_PLAYLIST_SUBHEADER": "Musiqi əlavə etmək üçün bir oynatma sırası yarat",
   "DATE_ADDED": "Əlavə etmə tarixi",
   "DELETE": "Sil",
@@ -165,6 +165,7 @@
   "READ": "Read",
   "READ_METADATA": "Read metadata",
   "RECOMMENDATIONS": "Önərilənlər",
+  "RECOMMENDED_HINT": "(Recommended)",
   "REFRESH": "YENİLƏ",
   "REFRESH_INFORMATION": "Just checks for the newly added & deleted files to update the music library [faster].",
   "REFRESH_SUBTITLE": "Check for newly added & deleted music files to update the music library.",
