--- a/assets/translations/en_US.json
+++ b/assets/translations/en_US.json
@@ -55,7 +55,7 @@
   "COPY_AS_JSON": "Copy as JSON",
   "COPY_LINK": "Copy link",
   "CREATE": "Create",
-  "CREATE_NEW_PLAYLIST": "CREATE NEW PLAYLIST",
+  "CREATE_NEW_PLAYLIST": "Create new playlist",
   "CREATE_PLAYLIST_SUBHEADER": "Create a new playlist to add your music",
   "DATE_ADDED": "Date added",
   "DELETE": "Delete",
@@ -96,7 +96,7 @@
   "IMAGES": "Images",
   "IMPORT": "Import",
   "IMPORT_PLAYLIST_SUBTITLE": "Enter the playlist URL",
-  "IMPORT_PLAYLIST_TITLE": "Import Playlist",
+  "IMPORT_PLAYLIST_TITLE": "Import playlist",
   "INDEXING_ALREADY_GOING_ON_SUBTITLE": "An indexing related operation is already going on. Please wait.",
   "INDEXING_ALREADY_GOING_ON_TITLE": "Wait",
   "INTERNET_ERROR": "Check your internet connection.",
@@ -165,6 +165,7 @@
   "READ": "Read",
   "READ_METADATA": "Read metadata",
   "RECOMMENDATIONS": "Suggestions",
+  "RECOMMENDED_HINT": "(Recommended)",
   "REFRESH": "Refresh",
   "REFRESH_INFORMATION": "Just checks for the newly added & deleted files to update the music library [faster].",
   "REFRESH_SUBTITLE": "Check for new & deleted files",
