--- a/assets/translations/tr_TR.json
+++ b/assets/translations/tr_TR.json
@@ -55,7 +55,7 @@
   "COPY_AS_JSON": "Copy as JSON",
   "COPY_LINK": "Copy link",
   "CREATE": "Oluştur",
-  "CREATE_NEW_PLAYLIST": "Yeni oynatma listesi oluştur",
+  "CREATE_NEW_PLAYLIST": "Create new playlist",
   "CREATE_PLAYLIST_SUBHEADER": "Müzik eklemek için bir oynatma listesi oluştur",
   "DATE_ADDED": "Eklenme tarihi",
   "DELETE": "Sil",
@@ -165,6 +165,7 @@
   "READ": "Read",
   "READ_METADATA": "Read metadata",
   "RECOMMENDATIONS": "Önerilenler",
+  "RECOMMENDED_HINT": "(Recommended)",
   "REFRESH": "YENİLE",
   "REFRESH_INFORMATION": "Just checks for the newly added & deleted files to update the music library [faster].",
   "REFRESH_SUBTITLE": "Check for newly added & deleted music files to update the music library.",
